--- a/18-09/Flexbox/index.html
+++ b/18-09/Flexbox/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 <section id="pai">
-    <div class="filho"> caixa 1 </div>
-    <div class="filho"> caixa 2 </div>
-    <div class="filho"> caixa 3 </div>
+    <div class="filho" id="caixa1"> caixa 1 </div>
+    <div class="filho" id="caixa2"> caixa 2 </div>
+    <div class="filho" id="caixa3"> caixa 3 </div>
 </section>
 
 </body>
