--- a/23-09/meu site/inde.html
+++ b/23-09/meu site/inde.html
@@ -30,6 +30,73 @@
                 <a href="#" class="botao-saiba-mais">Sua missão atual</a>
             </div>
         </section>
+
+        <section class="conteiner-pai">
+
+            <div class="conteiner-filho">
+                <img class="imagem_ordo" src="imagens/images.jfif" alt="">
+                <h2>simbolo ocultista </h2>
+                <p>este simbolo apareceu perto de onde sera sua missão tome cuidado</p>
+            </div>
+
+            <div class="conteiner-filho">
+                <img class="imagem_ordo" src="imagens/Miniatura_Nidere_em_Quarentena.webp" alt="">
+                <h2>monstro paranormal</h2>
+                <p>nos relatos das vitimas uma criatura cimilar a essa foi descrita</p>
+            </div>
+
+            <div class="conteiner-filho">
+                <img class="imagem_ordo" src="imagens/Ike_em_Desconjura3Fo.webp" alt="">
+                <h2>ocultista desaparecido</h2>
+                <p>o ocultista ike que estava desaparecido tambem foi visto pelas redondezas</p>
+            </div>
+
+        </section>
+
+        <section class="equipe-pai">
+
+            <div class="equipe-apoio">
+                <h2>equipe de apoio </h2>
+                <p>vai ser enviada uma equipe de apoio ao seu sinal</p>
+            </div>
+
+            <div >
+                <img class="equipe-imagem" src="imagens/Arte_de_Equipe_Kelvin_em_Livro_de_Regras.webp" alt="">
+            </div>
+            
+        </section>
+
+        <section class="elementos">
+            <div><img src="imagens/morte2.jpg" alt=""></div>
+            <div><img class="energia" src="imagens/energia3.jpg" alt=""></div>
+            <div><img src="imagens/sange2.jpg" alt=""></div>
+        </section>
+
+        <section class="banner2">
+            <div class="form-container">
+                <form>
+                    <h2>relatorio da missão</h2>
+
+                    <label for="nome">nome</label>
+                    <input type="text" id="nome" name="nome" required>
+
+                    <label for="email">email</label>
+                    <input type="email" id="email" name="email" required>
+
+                    <label for="mensagem">mensagem</label>
+                    <textarea id="mensagem" name="mensagem"></textarea>
+
+                    <button type="submit">enviar</button>
+
+                </form>
+
+
+            </div>
+        </section>
+
+
+
+
     </main>
 
     <footer class="footer">
