--- a/16-10/index.html
+++ b/16-10/index.html
@@ -17,7 +17,12 @@
 
     <button id="Botao2">Clique aqui</button>
 
-    <script src="script.js"></script>
+    <button id="Botao3">Clique aqui</button>
+
+   
     
+   <img id="imagem" src="Miniatura_Nidere_em_Quarentena.webp" alt="">
+
+ <script src="script.js"></script>
 </body>
 </html>
