--- a/21-10/index.html
+++ b/21-10/index.html
@@ -1,22 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da Cobra</title>
-    <style>
-        body{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: aliceblue;
-            font-family: Arial, sans-serir ;
-        }
-        canvas{
-            border: 1px solid #000;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas id="gameCanvas" width="400" height="400"></canvas>
