--- a/21-10/index.html
+++ b/21-10/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <canvas id="gameCanvas" width="400" height="400"></canvas>
+    <p id="contador">Nivel: 0</p>
     <script src="script.js"></script>
 </body>
 </html>
