--- a/21-10/index.html
+++ b/21-10/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <p id="Nivel">Nivel: 0</p>
     <canvas id="gameCanvas" width="400" height="400"></canvas>
-    <p id="contador">Nivel: 0</p>
     <script src="script.js"></script>
 </body>
 </html>
