--- a/21-10/index.html
+++ b/21-10/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p id="Nivel">Nivel: 0</p>
+    <p id="placar">Pontuação: 0</p>
+    <br>
     <canvas id="gameCanvas" width="400" height="400"></canvas>
     <script src="script.js"></script>
 </body>
