--- a/25-10/index.html
+++ b/25-10/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <h1 class="text-center text-primary">Bem-vindo ao Meu Site!</h1>
-    
+
     <p class="text-center">Este site está usando Bootstrap para ficar mais bonito e organizado.</p>
-    
-    <div class="col-md-1">
+    <div class="col-md-1" >
     <a href="#" class="btn btn-primary">Botão padão</a>
     <a href="#" class="btn btn-secondary">Botão secundario</a>
     <a href="#" class="btn btn-success">Botão de confirmação</a>
     <a href="#" class="btn btn-danger">Botão de cancelar</a>
-    <a href="#" class="btn btn-outline-primary">Botão de cancelar</a>
+    <a href="#" class="btn btn-outline-primary">Botão padão</a>
     <a href="#" class="btn btn-outline-secondary">Botão secundario</a>
     <a href="#" class="btn btn-outline-success">Botão de confirmação</a>
     <a href="#" class="btn btn-outline-danger">Botão de cancelar</a>
     </div>
+
     <div class="container">
         <div class="row">
             <div class="col-md-4" style="background-color: rgb(153, 234, 251);">
