--- a/07-11/index.html
+++ b/07-11/index.html
@@ -11,6 +11,12 @@
 
     <button id="botao1">Clique aqui</button>
 
+    <button id="botao2">De 2 cliques</button>
+
+    <button id="botao3">Clique com o botão direito</button>
+
+    <h1 id="tecla">Pressione uma tecla</h1>
+
     <script src="script.js"></script>
 </body>
 </html>
