--- a/08-11/index.html
+++ b/08-11/index.html
@@ -10,12 +10,13 @@
 <body>
 
         <main>
+            <section class="pai">
+            <h1 class="tituloMenor filho" id="tituloMenor">Seja bem vindo ao jogo</h1>
 
-        <h1 class="tituloMenor filho" id="tituloMenor">Seja bem vindo ao jogo</h1>
+            <h1 class="titulo filho" id="titulo1">Perguntas e Respostas</h1>
 
-        <h1 class="titulo filho" id="titulo1">Perguntas e Respostas</h1>
-
-        <button class="botao filho" id="botao1"><a href="jogo.html">Iniciar </a></button>
+            <a class="botao" href="jogo.html">Iniciar </a>
+        </section>
     </main>
 
 
