--- a/08-11/jogo.html
+++ b/08-11/jogo.html
@@ -12,10 +12,10 @@
         <main>
             <section class="pai">
 
-            <h3 class="tituloMenor filho" id="tituloMenor">Quem foi o primeiro ocultista</h3>
+            <h3 class="titulo filho pergunta">Quem foi o primeiro ocultista</h3>
 
             <div class="opcoes">
-                <button class="respostas">Bisteca</button>
+                <button class="respostas onclick">Bisteca</button>
                 <button class="respostas">Jeremias</button>
                 <button class="respostas">Gabriel Opspor</button>
                 <button class="respostas">Aeternus</button>
@@ -26,9 +26,13 @@
         </section>
     </main>
 
+    <div id="telaCheiaErro" class="tela-cheia"> 
+        <img src="img/Miniatura_Carente_em_Calamidade.webp" alt="erro" id="imagemErro" >
+        <audio id="somErro" src="audio/audio2.mp3"></audio>
+    </div>
 
 
-    
+    <script src="script.js"></script>
     
 </body>
 </html>
