--- a/08-11/index.html
+++ b/08-11/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perguntas e Respostas</title>
-    <link rel="shortut icon" href="favicon.ico" type="imagem/x-icon">
+    <link rel="shortut icon" href="img/download (2).jfif" type="imagem/x-icon">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
 
