--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -4,32 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pokedex</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon/favicon-16x16.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main> 
-        <img src="#" alt="pokemon"  class="pokemon_imagem">
+        <img src="#" alt="pokemon"  class="imagem_pokemon">
 
-        <h1 class="pokemon_data">
-            <span class="pokemon_number"></span>
-
-            <span class="pokemon_name"></span>
+        <h1 class="dados_pokemon">
+            <span class="numero_pokemon"></span>
+            <span class="nome_pokemon"></span>
         </h1>
-        <form class="form">
-            <imput 
+        <form class="formulario">
+            <input 
                 type="search" 
-                class="input_search"
-                placeholder="Name or Number"
+                class="campo_busca"
+                placeholder="Nome ou Número"
                 required
             />
         </form>
 
-        <div class="buttons">
-            <button class="button btn-prev">prev &lt;</button>
+        <div class="botoes">
+            <button class="botao botao-anterior">Anterior &lt;</button>
+            <button class="botao botao-proximo">Proximo &gt;</button>
+
         </div>
 
-
+        <img src="imagem/pokedex.png" alt="pokedex" class="pokedex">
     </main>
 
 
